# registration

./: CMakeLists.txt  package.xml  registration.rviz  tsdf.rviz
.github/workflows/: build_and_test.yml
config/: tsdf.rviz  tsdfslam.rviz
include/icp/: icp.h  misc.h  types.h
include/registration/: geometry.h  misc.h  registration.h  types.h
include/slam/: geometry.h
include/tsdfslam/: eigen_helpers.h  local_map.h
launch/: registration.launch  rviz_tsdfslam.launch
lib/icp/: icp.cpp
scripts/: pcl_publisher.py
src/: icp_node.cpp  registration.cpp  registration_node.cpp  tsdf_node.cpp
test/: icp_test.cpp  icp_test.test  registration_test.cpp  registration_test.launch  tsdfslam_test.cpp  tsdfslam_test.test
